@@ -1,2 +1,2 @@
-__version__ = '0.6.0'
+__version__ = '0.6.1'
 
